--- a/deployment.yml
+++ b/deployment.yml
@@ -1,32 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nodesy-deployment
+  name: nodejswebapp-deployment
   labels:
-    app: nodesy-app
+    app: nodejswebapp
 spec:
-  replicas: 10
+  replicas: 4
   selector:
     matchLabels:
-      app: nodesy-app
+      app: nodejswebapp
   template:
     metadata:
       labels:
-        app: nodesy-app
+        app: nodejswebapp
     spec:
       containers:
-        - name: nodesy-container
-          image: boboacr.azurecr.io/nodejswebapp:v1.0.0
-          ports:
+      - name: nodejswebapp-container
+        image: mxqeettasawaracr.azurecr.io/nodejswebapp:v1.0.0
+        ports:
+        
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: nodesy-service
+  labels:
+    app: nodejswebapp
 spec:
   selector:
     app: nodesy-app
   ports:
-    - protocol: TCP
-      port: 80
+  - port: 3000
   type: LoadBalancer
